Brain-BT/force-app/main/default/objects/Pricebook2/Pricebook2.object-meta.xml
<CustomObject>
    <sharingModel>ReadSelect</sharingModel>
</CustomObject>