Brain-BT/force-app/main/default/objects/Pricebook2/fields/BT_Visible__c.field-meta.xml
<CustomField>
    <fullName>BT_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BT Visible</label>
    <type>Checkbox</type>
</CustomField>