Brain-BT/force-app/main/default/objects/Pricebook2/fields/Collection__c.field-meta.xml
<CustomField>
    <fullName>Collection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection</label>
    <referenceTo>Project_Tier__c</referenceTo>
    <relationshipLabel>Price Books</relationshipLabel>
    <relationshipName>Price_Books</relationshipName>
    <type>Lookup</type>
</CustomField>